--- a/課題　RPA演習/週次処理.xaml
+++ b/課題　RPA演習/週次処理.xaml
@@ -1,4 +1,4 @@
-<Activity mc:Ignorable="sap sap2010" x:Class="週次処理" this:週次処理.bookName="files\出席簿集計表_2020_C1_北村(スポーツテクノロジー学科 アスリートコース） (3).xlsm" this:週次処理.writeIndex="C" this:週次処理.sheetName="8月" this:週次処理.writeBookName="files\欠席時間集計表 (3).xlsx" this:週次処理.writeSheetName="sheet1" this:週次処理.NINZU="29" this:週次処理.readCol="AJ" this:週次処理.writeColName="C" xmlns="http://schemas.microsoft.com/netfx/2009/xaml/activities" xmlns:av="http://schemas.microsoft.com/winfx/2006/xaml/presentation" xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" xmlns:mva="clr-namespace:Microsoft.VisualBasic.Activities;assembly=System.Activities" xmlns:sap="http://schemas.microsoft.com/netfx/2009/xaml/activities/presentation" xmlns:sap2010="http://schemas.microsoft.com/netfx/2010/xaml/activities/presentation" xmlns:scg="clr-namespace:System.Collections.Generic;assembly=mscorlib" xmlns:this="clr-namespace:" xmlns:ui="http://schemas.uipath.com/workflow/activities" xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml">
+<Activity mc:Ignorable="sap sap2010" x:Class="週次処理" this:週次処理.bookName="files\出席簿集計表_2020_C1_北村(スポーツテクノロジー学科 アスリートコース） (3).xlsm" this:週次処理.writeIndex="C" this:週次処理.sheetName="7月" this:週次処理.writeBookName="files\欠席時間集計表 (3).xlsx" this:週次処理.writeSheetName="sheet1" this:週次処理.NINZU="29" this:週次処理.readCol="AJ" this:週次処理.writeColName="C" xmlns="http://schemas.microsoft.com/netfx/2009/xaml/activities" xmlns:av="http://schemas.microsoft.com/winfx/2006/xaml/presentation" xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" xmlns:mva="clr-namespace:Microsoft.VisualBasic.Activities;assembly=System.Activities" xmlns:sap="http://schemas.microsoft.com/netfx/2009/xaml/activities/presentation" xmlns:sap2010="http://schemas.microsoft.com/netfx/2010/xaml/activities/presentation" xmlns:scg="clr-namespace:System.Collections.Generic;assembly=mscorlib" xmlns:this="clr-namespace:" xmlns:ui="http://schemas.uipath.com/workflow/activities" xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml">
   <x:Members>
     <x:Property Name="bookName" Type="InArgument(x:String)" />
     <x:Property Name="writeIndex" Type="InArgument(x:String)" />
@@ -12,7 +12,7 @@
   <mva:VisualBasic.Settings>
     <x:Null />
   </mva:VisualBasic.Settings>
-  <sap:VirtualizedContainerService.HintSize>720,801</sap:VirtualizedContainerService.HintSize>
+  <sap:VirtualizedContainerService.HintSize>719,801</sap:VirtualizedContainerService.HintSize>
   <sap2010:WorkflowViewState.IdRef>週次処理_1</sap2010:WorkflowViewState.IdRef>
   <TextExpression.NamespacesForImplementation>
     <scg:List x:TypeArguments="x:String" Capacity="21">
@@ -63,11 +63,7 @@
     <Flowchart.Variables>
       <Variable x:TypeArguments="ui:GenericValue[]" Name="KekkaData" />
       <Variable x:TypeArguments="x:Int32" Name="Counter" />
-      <Variable x:TypeArguments="x:Int32" Name="startCol">
-        <Variable.Default>
-          <Literal x:TypeArguments="x:Int32" Value="5" />
-        </Variable.Default>
-      </Variable>
+      <Variable x:TypeArguments="x:Int32" Default="5" Name="startCol" />
     </Flowchart.Variables>
     <sap:WorkflowViewStateService.ViewState>
       <scg:Dictionary x:TypeArguments="x:String, x:Object">
@@ -195,7 +191,7 @@
                           <InArgument x:TypeArguments="x:Int32">0</InArgument>
                         </Assign.Value>
                       </Assign>
-                      <ui:InterruptibleWhile DisplayName="繰り返し (前判定)" sap:VirtualizedContainerService.HintSize="412,344" sap2010:WorkflowViewState.IdRef="InterruptibleWhile_2">
+                      <ui:InterruptibleWhile Condition="[Counter&lt;NINZU]" DisplayName="繰り返し (前判定)" sap:VirtualizedContainerService.HintSize="412,344" sap2010:WorkflowViewState.IdRef="InterruptibleWhile_2">
                         <ui:InterruptibleWhile.Body>
                           <Sequence DisplayName="本体" sap:VirtualizedContainerService.HintSize="376,179" sap2010:WorkflowViewState.IdRef="Sequence_4">
                             <sap:WorkflowViewStateService.ViewState>
@@ -206,9 +202,6 @@
                             <ui:ExcelWriteCell Cell="[writeColName+(Counter+2).ToString]" DisplayName="セルに書き込み" sap:VirtualizedContainerService.HintSize="334,87" sap2010:WorkflowViewState.IdRef="ExcelWriteCell_1" SheetName="[writeSheetName]" Text="[KekkaData(Counter)]" />
                           </Sequence>
                         </ui:InterruptibleWhile.Body>
-                        <ui:InterruptibleWhile.Condition>
-                          <mva:VisualBasicValue x:TypeArguments="x:Boolean" ExpressionText="Counter&lt;NINZU" />
-                        </ui:InterruptibleWhile.Condition>
                       </ui:InterruptibleWhile>
                     </Sequence>
                   </ActivityAction>
